--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,8 @@
   <parent>
 	<groupId>org.idempiere</groupId>
 	<artifactId>org.idempiere.parent</artifactId>
-	<version>8.2.0-SNAPSHOT</version>
+	<version>9.0.0-SNAPSHOT</version>
+	<relativePath>../../idempiere/org.idempiere.parent/pom.xml</relativePath>
   </parent>
   <groupId>th.motive.rubber</groupId>
   <version>1.0.0-SNAPSHOT</version>
