--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
 	<groupId>org.idempiere</groupId>
 	<artifactId>org.idempiere.parent</artifactId>
-	<version>9.0.0-SNAPSHOT</version>
+	<version>${revision}</version>
 	<relativePath>../../idempiere/org.idempiere.parent/pom.xml</relativePath>
   </parent>
   <groupId>th.motive.rubber</groupId>
